@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=com.nokia.hildon_debian_package_ovi
+Exec=/usr/bin/hildon-application-manager --no-show
